deploy/allspark.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: allspark
  namespace: jlab
  labels:
    name: allspark
spec:
  replicas: 1
  selector:
    matchLabels:
      name: allspark
  template:
    metadata:
      labels:
        name: allspark
    spec:
      securityContext:
        runAsUser: 0
        fsGroup: 0
      containers:
        - name: allspark
          image: crossentpx/all-spark-notebook:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8888
          command:
            - /bin/bash
            - -c
            - |
              chmod -R 777 /home/jovyan; 
              echo 'jovyan  ALL=(ALL:ALL) ALL' >> /etc/sudoers;
              start.sh jupyter lab --LabApp.token='password' --LabApp.ip='0.0.0.0' --LabApp.allow_root=True
          volumeMounts:
            - name: allspark-data
              mountPath: /home/jovyan
          resources:
            requests:
              memory: 500Mi
              cpu: 250m
      restartPolicy: Always
      volumes:
      - name: allspark-data
        persistentVolumeClaim:
          claimName: allspark-pvc2
---
apiVersion: v1
kind: Service
metadata:
  name: allspark
  namespace: jlab
  labels:
    name: allspark
spec:
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
      name: jupyter
    - port: 4040
      targetPort: 4040
      protocol: TCP
      name: sparkui
  selector:
    name: allspark

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: allspark
  namespace: jlab
spec:
  rules:
  - host: allspark.jlab.14.49.44.246.xip.io
    http:
      paths:
      - backend:
          serviceName: allspark
          servicePort: 8888


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: allsparkui
  namespace: jlab
spec:
  rules:
  - host: allsparkui.jlab.14.49.44.246.xip.io
    http:
      paths:
      - backend:
          serviceName: allspark
          servicePort: 4040
