deploy/jupyter-gpu.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: jupytergpu
  name: jupytergpu
  namespace: jupyter
spec:
  replicas: 1
  selector:
    matchLabels:
      run: jupytergpu
  template:
    metadata:
      labels:
        run: jupytergpu
    spec:
      containers: 
      - image: kopkop/jupyter-tensorflow-notebook-gpu
        name: jupytergpu
        resources: 
          limits: 
            nvidia.com/gpu: 1 

---

apiVersion: v1
kind: Service
metadata:
  name: jupytergpu
  namespace: jupyter
  labels:
    run: jupytergpu
spec:
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
  selector:
    run: jupytergpu

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupytergpu
  namespace: jupyter
spec:
  rules:
  - host: jupytergpu.jupyter.14.49.44.246.xip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jupytergpu
            port: 
              number: 8888
