deploy/jupyterlab.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyterlab
  namespace: jlab
  labels:
    name: jupyterlab
spec:
  replicas: 1
  selector:
    matchLabels:
      name: jupyterlab
  template:
    metadata:
      labels:
        name: jupyterlab
    spec:
      securityContext:
        runAsUser: 0
        fsGroup: 0
      containers:
        - name: jupyterlab
          image: jupyter/datascience-notebook:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8888
          command:
            - /bin/bash
            - -c
            - |
              chmod -R 777 /home/jovyan; 
              start.sh jupyter lab --LabApp.token='password' --LabApp.ip='0.0.0.0' --LabApp.allow_root=True
          volumeMounts:
            - name: jupyterlab-data
              mountPath: /home/jovyan
          resources:
            requests:
              memory: 500Mi
              cpu: 250m
      restartPolicy: Always
      volumes:
      - name: jupyterlab-data
        persistentVolumeClaim:
          claimName: jupyterlab-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: jupyterlab
  namespace: jlab
  labels:
    name: jupyterlab
spec:
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
  selector:
    name: jupyterlab

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jupyterlab
  namespace: jlab
spec:
  rules:
  - host: jupyterlab.jlab.14.49.44.246.xip.io
    http:
      paths:
      - backend:
          serviceName: jupyterlab
          servicePort: 8888
