deploy/keras.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keras
  namespace: jlab
  labels:
    name: keras
spec:
  replicas: 1
  selector:
    matchLabels:
      name: keras
  template:
    metadata:
      labels:
        name: keras
    spec:
      securityContext:
        runAsUser: 0
        fsGroup: 0
      containers:
      - name: keras
        image: crossentpx/keras-py36-cpu 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8888
        command:
        - /bin/bash
        - -c
        - |
          jupyter notebook --no-browser --ip=0.0.0.0 --allow-root --NotebookApp.token='password' --notebook-dir='/root'
        volumeMounts:
        - name: keras-data
          mountPath: /root
        resources:
          requests:
            memory: 500Mi
            cpu: 250m
          limits:
            nvidia.com/gpu: 1
      restartPolicy: Always
      volumes:
      - name: keras-data
        persistentVolumeClaim:
          claimName: keras-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: keras
  namespace: jlab
  labels:
    name: keras
spec:
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
      name: jupyter
    - port: 8501
      targetPort: 8501
      protocol: TCP
      name: streamlit
  selector:
    name: keras

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keras
  namespace: jlab
spec:
  rules:
  - host: keras.jlab.14.49.44.246.xip.io
    http:
      paths:
      - backend:
          serviceName: keras
          servicePort: 8888

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: streamlit
  namespace: jlab
spec:
  rules:
  - host: streamlit.jlab.14.49.44.246.xip.io
    http:
      paths:
      - backend:
          serviceName: keras
          servicePort: 8501
