deploy/pyspark.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyspark
  namespace: jlab
  labels:
    name: pyspark
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pyspark
  template:
    metadata:
      labels:
        name: pyspark
    spec:
      securityContext:
        runAsUser: 0
        fsGroup: 0
      containers:
        - name: pyspark
          image: jupyter/pyspark-notebook:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8888
          command:
            - /bin/bash
            - -c
            - |
              chmod -R 777 /home/jovyan; 
              echo 'jovyan  ALL=(ALL:ALL) ALL' >> /etc/sudoers;
              start.sh jupyter lab --LabApp.token='password' --LabApp.ip='0.0.0.0' --LabApp.allow_root=True
          volumeMounts:
            - name: pyspark-data
              mountPath: /home/jovyan
          resources:
            requests:
              memory: 500Mi
              cpu: 250m
      restartPolicy: Always
      volumes:
      - name: pyspark-data
        persistentVolumeClaim:
          claimName: pyspark-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pyspark
  namespace: jlab
  labels:
    name: pyspark
spec:
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
  selector:
    name: pyspark

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pyspark
  namespace: jlab
spec:
  rules:
  - host: pyspark.jlab.14.49.44.246.xip.io
    http:
      paths:
      - backend:
          serviceName: pyspark
          servicePort: 8888
